<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="in.edu.bml.cse.semester3.lazybone.OrderActivity"
    android:background="@drawable/backdropgrey">

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:text="@string/rao"
        android:id="@+id/RAO"
        android:elevation="8dp"
        android:background="@drawable/raoicon"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Adda"
        android:layout_marginTop="29dp" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:text="@string/muskaan"
        android:id="@+id/muskaan"
        android:elevation="8dp"
        android:background="@drawable/muskaanicon"
        android:layout_below="@+id/RAO"
        android:layout_alignStart="@+id/RAO"
        android:layout_marginTop="41dp" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:text="@string/adda"
        android:id="@+id/Adda"
        android:elevation="8dp"
        android:background="@drawable/addaicon"
        android:layout_below="@+id/muskaan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />
</RelativeLayout>
